# Versatile_Robot

./: LICENSE  README.md
cpr_obstacle_gazebo/launch/: cpr_obstacle_world.launch
moveit_arm/: package.xml
moveit_arm/config/: Robot_Arm.srdf  fake_controllers.yaml  joint_limits.yaml  ompl_planning.yaml  ros_controllers.yaml  simple_moveit_controllers.yaml  stomp_planning.yaml
moveit_arm/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml  trajectory_execution.launch.xml
robot_arm/: CMakeLists.txt  package.xml
robot_arm/config/navigation/: amcl_config.yaml  costmap_common.yaml  costmap_global_laser.yaml  costmap_global_static.yaml  costmap_local.yaml  planner.yaml
robot_arm/launch/: arm_Demo.launch  main_Launch.launch  main_Launch_old.launch  map_Robot.launch  navigate_Manipulate_Robot.launch  navigate_Robot.launch
robot_arm/launch/gazebo_worlds/: gazebo_crowded.launch  gazebo_obstacle.launch  gazebo_obstacle_edited.launch  gazebo_wall.launch
robot_arm/maps/obstacle_map/: obstacle_map.pgm  obstacle_map.yaml  obstacle_map_2.pgm  obstacle_map_2.yaml
robot_arm/rviz/: rvizMapping.rviz  rvizNavigate.rviz  rvizNavigate_Planning.rviz
robot_arm/scripts/: teleop.py
robot_arm/scripts/plot/: End_eff_trajectory_plotting.py
robot_arm/scripts/validation/: fk_validation.py  ik_val.py
robot_arm/urdf/: robot_arm_servo.urdf.xacro  robot_arm_servo_old.urdf.xacro
robot_arm/worlds/: crowded_world.world  obstacle_world_edited.world
